--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
         <div class="block">
             <strong>К выполнению</strong>
             <div class="button-block">
-                <button id="create-task-button">Новая задача</button>
+              <div class="input-field">
+                <input id="create-task-input" placeholder="Введите название задачи">
+                <button id="voice-input-button"></button>
+              </div>
+              <button id="create-task-button"><img src="images/send.svg"></button>
             </div>
             <div class="task-list" id="todo-tasks-list">
             </div>
